--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
 	<build>
 		<plugins>
-			<plugin>
+			<!--  <plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>2.0</version>
@@ -43,7 +43,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> -->
 			<!-- On prem deployment -->
 			<plugin>
     <groupId>org.mule.tools.maven</groupId>
