--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,8 @@
             </goals>
         </execution>
     </executions>
-</plugin>
-			<plugin> -->
+</plugin> -->
+			<plugin> 
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-app-maven-plugin</artifactId>
 				<version>${mule.tools.version}</version>
