--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 				<configuration>
 					<deploymentType>cloudhub</deploymentType>
 					<muleVersion>3.7.4</muleVersion>
-					<username>paneeendra_vr88</username>
+					<username>paneendra_vr88</username>
 					<password>Vang0l88!</password>
 					<workerType>Micro</workerType>
 					<redeploy>true</redeploy>
